testdata/baselines/reference/submodule/compiler/unusedTypeParameters6.errors.txt
a.ts(1,8): error TS6196: 'T' is declared but never used.


==== a.ts (1 errors) ====
    class C<T> { }
           ~~~
!!! error TS6196: 'T' is declared but never used.
    
==== b.ts (0 errors) ====
    interface C<T> { a: T; }